[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pentaforge-knowledge"
version = "0.1.0"
description = "Cybersecurity RAG Knowledge Base for PentaForge"
requires-python = ">=3.11"
license = { text = "Proprietary" }

dependencies = [
    # Core
    "pydantic>=2.5,<3.0",
    "pydantic-settings>=2.1,<3.0",
    "structlog>=23.1,<25.0",

    # Async HTTP & git
    "httpx>=0.25,<1.0",

    # Embedding & Vector DB
    "openai>=1.6,<2.0",
    "qdrant-client>=1.9,<2.0",


    # Cache
    "redis>=5.0,<6.0",

    # HTML parsing
    "beautifulsoup4>=4.12,<5.0",

    # NVD API
    "aiohttp>=3.9,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "ruff>=0.1.9",
    "mypy>=1.8",
    "coverage>=7.4",
]

[project.scripts]
pentaforge-knowledge = "server.db.knowledge.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
